// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTrackRenderer > レンダリングイベントが正しく発行される 1`] = `
{
  "renderingEventInfos": [
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "phrasesGenerated",
    },
    {
      "phraseInfos": Map {
        "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "cacheLoaded",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "queryHash": "407fd92072dbd5cfe1359fff3cf7827d255486ceeafcb7c519fcb9d0413c39f7",
      "queryKey": "1f185f2b4ddc330d164ba11429b2a7ec50e7ab4603610162765294d3264e43ad",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
      "singingPitchKey": "998014dc5fd726c134192c7e71ca59aae37cf54523ea13f41d73af63004dc42a",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
      "singingVolumeKey": "c33f7506ca263efb17f096ed9bd1cd5023bef58f106558bcffa09416157f40e7",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
      "singingVoiceKey": "f0335f4115dc43814dc0c8a08fcaefa88c9fd979f494b80ca5e3e79558da1d28",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "407fd92072dbd5cfe1359fff3cf7827d255486ceeafcb7c519fcb9d0413c39f7",
        "queryKey": "1f185f2b4ddc330d164ba11429b2a7ec50e7ab4603610162765294d3264e43ad",
        "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
        "singingPitchKey": "998014dc5fd726c134192c7e71ca59aae37cf54523ea13f41d73af63004dc42a",
        "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
        "singingVoiceKey": "f0335f4115dc43814dc0c8a08fcaefa88c9fd979f494b80ca5e3e79558da1d28",
        "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
        "singingVolumeKey": "c33f7506ca263efb17f096ed9bd1cd5023bef58f106558bcffa09416157f40e7",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "queryHash": "a8f2b7b595373ed7bd8d6b4b68fb6c2654a82b8c0132e37dc1e9a75128d657fa",
      "queryKey": "1ef9b8f09fc176283cc3c31f0f10a6ac463ffdd429bbf6bff901e74940fd7be4",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
      "singingPitchKey": "efc1f6b842704e3baaf39cab5bce73e4b2b5921da2f19dca081d60a8f4e06f50",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
      "singingVolumeKey": "1a68053b91cf9c5b2606082f036f9088dbed5cb3c54b03307093ba9e41b0ed8d",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
      "singingVoiceKey": "23107c07791a14a185fdcd508c0cebb73731ea825a0d7a27d6c962636aaf9305",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "a8f2b7b595373ed7bd8d6b4b68fb6c2654a82b8c0132e37dc1e9a75128d657fa",
        "queryKey": "1ef9b8f09fc176283cc3c31f0f10a6ac463ffdd429bbf6bff901e74940fd7be4",
        "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
        "singingPitchKey": "efc1f6b842704e3baaf39cab5bce73e4b2b5921da2f19dca081d60a8f4e06f50",
        "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
        "singingVoiceKey": "23107c07791a14a185fdcd508c0cebb73731ea825a0d7a27d6c962636aaf9305",
        "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
        "singingVolumeKey": "1a68053b91cf9c5b2606082f036f9088dbed5cb3c54b03307093ba9e41b0ed8d",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "queryHash": "7cf49460e459d9183231d696ccca779a9e4c78ee5b5fe2c56550153a7aed117c",
      "queryKey": "19606d3341393434c1ee3c8592993e5f9465b53ab1435e659b769932b7835ebc",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
      "singingPitchKey": "984af5b252bc0bbaf65c6775e8ab8cdf19ee7891ace05502940665b53b7f8ac8",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
      "singingVolumeKey": "4e3e7d7e750a101d39bb61aef3e9a3e8544d01a051f2df53b261b5ea2e4f5712",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
      "singingVoiceKey": "2ef0cc22ff4a57ba57c486ba20143d9d76e72f8a02379b9ff60f9abf52920dce",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "7cf49460e459d9183231d696ccca779a9e4c78ee5b5fe2c56550153a7aed117c",
        "queryKey": "19606d3341393434c1ee3c8592993e5f9465b53ab1435e659b769932b7835ebc",
        "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
        "singingPitchKey": "984af5b252bc0bbaf65c6775e8ab8cdf19ee7891ace05502940665b53b7f8ac8",
        "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
        "singingVoiceKey": "2ef0cc22ff4a57ba57c486ba20143d9d76e72f8a02379b9ff60f9abf52920dce",
        "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
        "singingVolumeKey": "4e3e7d7e750a101d39bb61aef3e9a3e8544d01a051f2df53b261b5ea2e4f5712",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f",
      "type": "phraseRenderingComplete",
    },
  ],
}
`;

exports[`SongTrackRenderer > 正しいレンダリング結果が返される 1`] = `
{
  "renderingResultInfo": {
    "phraseInfos": Map {
      "d20a046f707fe40f61b348e537bb9d648db896a9352ceedc07e7675942cf2117" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "position": 2880,
          },
        ],
        "queryHash": "407fd92072dbd5cfe1359fff3cf7827d255486ceeafcb7c519fcb9d0413c39f7",
        "queryKey": "1f185f2b4ddc330d164ba11429b2a7ec50e7ab4603610162765294d3264e43ad",
        "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
        "singingPitchKey": "998014dc5fd726c134192c7e71ca59aae37cf54523ea13f41d73af63004dc42a",
        "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
        "singingVoiceKey": "f0335f4115dc43814dc0c8a08fcaefa88c9fd979f494b80ca5e3e79558da1d28",
        "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
        "singingVolumeKey": "c33f7506ca263efb17f096ed9bd1cd5023bef58f106558bcffa09416157f40e7",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "c6b680b930c4a171f499d0a1b16818434b3cf38d8787d0ac1c5dea45d9008062" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "position": 4320,
          },
        ],
        "queryHash": "a8f2b7b595373ed7bd8d6b4b68fb6c2654a82b8c0132e37dc1e9a75128d657fa",
        "queryKey": "1ef9b8f09fc176283cc3c31f0f10a6ac463ffdd429bbf6bff901e74940fd7be4",
        "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
        "singingPitchKey": "efc1f6b842704e3baaf39cab5bce73e4b2b5921da2f19dca081d60a8f4e06f50",
        "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
        "singingVoiceKey": "23107c07791a14a185fdcd508c0cebb73731ea825a0d7a27d6c962636aaf9305",
        "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
        "singingVolumeKey": "1a68053b91cf9c5b2606082f036f9088dbed5cb3c54b03307093ba9e41b0ed8d",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "9f56ff7190aacf6eb22c686d458de68a24f45c0c944a0dbd801a9b601473f27f" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "position": 5280,
          },
        ],
        "queryHash": "7cf49460e459d9183231d696ccca779a9e4c78ee5b5fe2c56550153a7aed117c",
        "queryKey": "19606d3341393434c1ee3c8592993e5f9465b53ab1435e659b769932b7835ebc",
        "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
        "singingPitchKey": "984af5b252bc0bbaf65c6775e8ab8cdf19ee7891ace05502940665b53b7f8ac8",
        "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
        "singingVoiceKey": "2ef0cc22ff4a57ba57c486ba20143d9d76e72f8a02379b9ff60f9abf52920dce",
        "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
        "singingVolumeKey": "4e3e7d7e750a101d39bb61aef3e9a3e8544d01a051f2df53b261b5ea2e4f5712",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
    },
    "type": "complete",
  },
}
`;
